--- a/style.css
+++ b/style.css
@@ -9,7 +9,25 @@ body {
   }
 nav {
   display: flex;
+  margin-bottom: 1em;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: oklch(80% 3% 200);
 }
-a {
+nav a {
   flex: 1;
+  text-decoration: none;
+  color: inherit;
+  text-align: center;
+  padding: 0.5em;
+}
+nav a.current {
+  border-bottom: 0.4em;
+  border-bottom-color: oklch(80% 3% 200);
+  padding-bottom: 25px;
+
+}
+html {
+  --color-accent: oklch(65% 50% 0);
+  accent-color: var(--color-accent);
 }
