--- a/style.css
+++ b/style.css
@@ -31,3 +31,29 @@ html {
   --color-accent: oklch(65% 50% 0);
   accent-color: var(--color-accent);
 }
+input, textarea, button {
+  font: inherit;
+}
+form {
+  display: grid;
+  grid-template-columns: auto 1fr;
+}
+form label {
+  display: grid;
+  grid-template-columns: subgrid;
+  grid-column: 1 / -1;
+  gap: 1em;
+}
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
+
+}
+.projects article {
+  grid-template-rows: subgrid;
+  grid-row: span 3;
+  gap: 1em;
+}
+.projects h2 {
+  margin: 0;
+}
