--- a/style.css
+++ b/style.css
@@ -144,3 +144,18 @@ font-size: 80%;
   border-radius: 0.25em;
   display: inline-block;
 }
+&:has(path:hover) {
+  path:not(:hover) {
+    opacity: 0.5;
+  }
+}
+path {
+  transition: 300ms;
+}
+.selected {
+  --color: oklch(60% 45% 0) !important;
+
+  &:is(path) {
+    fill: var(--color);
+  }
+}
